--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ proguard/
 
 # Log Files
 *.log
+
+# Android studio specific
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/captures
